--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         Hello and Welcome.
     </h1>
 
-    <img src='UltraArts Logo (ver 2).png' width=200 height=200 >
+    <img src='https://github.com/Ultra-Arts/Ultra-Arts.github.io/blob/main/UltraArts%20Logo%20(ver%202).png?raw=true' width=200 height=200 >
 
     <script type='text/Javascript'>
 
